--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
-    <string name="app_name">lc_framework</string>
+    <string name="app_name">framework</string>
+
+    <string name="cmn_anr_message">应用出错，即将关闭!</string>
+    <string name="cmn_hint">提示</string>
+    <string name="cmn_cancel">取消</string>
+    <string name="cmn_confirm">确定</string>
+    <string name="mall_comment_save">保存</string>
+    <string name="mall_comment_del">删除</string>
+    <string name="permission_hint_perfix">该操作需要授权</string>
+    <bool name="cmn_landscape_only">false</bool>
+
+    <string name="cmn_exception_network_connect_fail">网络连接失败</string>
+    <string name="cmn_exception_network_connect_timeout">网络连接超时</string>
+    <string name="cmn_exception_network_error">网络错误，请检查您的网络设置</string>
+    <string name="cmn_exception_load_data_fail">加载失败，请稍后重试</string>
+    <string name="cmn_exception_un_know">未知错误</string>
+    <string name="cmn_exception_parse_data">数据解析失败</string>
 </resources>
